Merged most of the changes made in my branch last week to trunk.